--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,31 @@
-body , div {
+div {
     display: flex;
-    justify-content: center;
+}
+
+.content {
+    flex-direction: column;
     align-items: center;
+    gap: 16px;
+    padding: 16px;
+}
+
+.buttons {
+    gap: 16px;
 }
 
 .grid {
     flex-direction: column;
-    border-bottom: 1px solid black;
-    border-right: 1px solid black;
-    align-items: center;
+    border: 1px solid black;
+    width: 640px;
+    height: 640px;
+}
+
+.row {
+    flex: 1;
 }
 
 .sqr {
     border-top: 1px solid black;
     border-left: 1px solid black;
-    width: 14px;
-    height: 14px;;
+    flex: 1;
 }
